[project]
name = "ml-utils"
version = "0.1.0"
description = "Machine Learning Toolkit"
authors = [
    {name = "xbmlz",email = "997909544@qq.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "imbalanced-learn>=0.11.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
